consolidate page container, uniform padding, wrap farm tags to avoid scroll

--- a/src/app/components/profile-farm/profile-farm.component.scss
+++ b/src/app/components/profile-farm/profile-farm.component.scss
@@ -52,6 +52,7 @@ mat-divider {
 
 .horizontal-container {
   display: flex;
+  flex-wrap: wrap;
 
   .icon-container {
     margin: 1rem 1rem 0 1rem;
