--- a/src/app/pages/farmer-home/farmer-home.component.scss
+++ b/src/app/pages/farmer-home/farmer-home.component.scss
@@ -7,9 +7,6 @@
 .noProfile {
   opacity: 0.7;
 }
-.container {
-  margin: 15px;
-}
 
 .warning-text {
   color: $custom-orange;
